--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,7 +51,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/StorylineEdProj_5_02")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/StorylineEdProj_5_02")
-+ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="StorylineEdProj_5_02GameModeBase")
++ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="StorylineGameMode_Basic")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
